# Velirion

./: .env  .gitignore  BACKEND_INTEGRATION.md  COMPLIANCE_SUMMARY.md  DEPLOYMENT_SUMMARY.md  MILESTONE_5_COMPLETE.md  NEXT_STEPS.md  PROJECT_PROGRESS.md  QUICK_REFERENCE.md  QUICK_TEST.md  QUICK_VERIFY.md  README.md  SOLANA_DEPLOYMENT.md  SOLANA_TEST_GUIDE.md  TESTING_GUIDE.md  clean_flattened.ps1  coverage.json  deployment-complete.json  deployment-presale-v2.json  deployment-sepolia.json  deployment-token.json  hardhat.config.ts  package-lock.json  package.json  run-tests.js  vlr-testnet-sepolia-transfers.csv
docs/: COMPLETE_PROJECT_COMPLIANCE_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUE_AND_SOLUTION.md  DOCUMENTATION_INDEX.md  MILESTONE_1_DISCREPANCY_CHECK.md  PROJECT_TRACKER.md  QUICK_START_GUIDE.md  VELIRION_IMPLEMENTATION_GUIDE.md
flattened_contracts/: MockERC20_flattened.sol  PresaleV2_flattened.sol  VelirionDAO_flattened.sol  VelirionGuardianNFT_flattened.sol  VelirionReferralNFT_flattened.sol  VelirionReferral_flattened.sol  VelirionStaking_flattened.sol  VelirionTimelock_flattened.sol  VelirionToken_VERIFIED.sol  VelirionTreasury_flattened.sol
scripts/: 01_deploy_token.ts  02_deploy_presale_v2.ts  03_deploy_referral.ts  03_start_phase.ts  04_deploy_staking.ts  05_deploy_dao.ts  05_deploy_nft.ts  clean_all_flattened.js  clean_exact.js  deploy_all.ts  deploy_complete.ts  deploy_sepolia_simple.ts  generate_test_addresses.ts  integration-test.js  run_milestone1_checks.ps1  (+6 more)
solana/programs/velirion-spl/: Cargo.toml
solana/programs/velirion-spl/src/: lib.rs
(+141 files in other folders)
