[package]
name = "velirion-spl"
version = "1.0.0"
description = "Velirion SPL Token with 0.5% burn mechanism"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velirion_spl"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.3", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
